--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Asset Management</title>
+    <title>Output Management</title>
+    <script src="../dist/print.bundle.js"></script>
 </head>
 
 <body>
-    <script src="../dist/bundle.js"></script>
+    <script src="../dist/index.bundle.js"></script>
 </body>
 
 </html>
